--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "autoprefixer": "^9.3.1",
+    "postcss-loader": "^3.0.0",
+    "prop-types": "^15.6.2"
   }
 }
